--- a/src/main/resources/templates/loan.html
+++ b/src/main/resources/templates/loan.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>user</title>
+    <title>loan</title>
 </head>
 <body>
 <h1>Credit</h1>
